feat(SR-7): implement endpoint to accept service request by provider
