# cm.klg.service-request/src/main/java/cm/klg/service_request/adapter/messaging/outbound/EventTopics.java
@@ -1,0 +1,7 @@
+package cm.klg.service_request.adapter.messaging.outbound;
+
+public class EventTopics {
+  private EventTopics() {}
+
+  public static final String DESTINATION_SERVICE_REQUEST_OUT = "service-request-out-0";
+}
