# cm.klg.service-request/src/main/java/cm/klg/service_request/application/outbound/DomainEventPublisher.java
@@ -1,0 +1,7 @@
+package cm.klg.service_request.application.outbound;
+
+import cm.klg.service_request.domain.event.ServiceRequestAcceptedEvent;
+
+public interface DomainEventPublisher {
+  void publishServiceRequestAcceptedEvent(ServiceRequestAcceptedEvent event);
+}
