# cm.klg.service-request/src/main/java/cm/klg/service_request/config/ServiceRequestBeans.java
@@ -3,9 +3,11 @@ package cm.klg.service_request.config;
 import cm.klg.common.base.config.TransactionBeansProvider;
 import cm.klg.common.base.transaction.DomainToHttpExceptionTranslator;
 import cm.klg.service_request.adapter.rest.inbound.DefaultDomainToHttpExceptionTranslator;
+import cm.klg.service_request.application.outbound.DomainEventPublisher;
 import cm.klg.service_request.application.outbound.ServiceProviderRepository;
 import cm.klg.service_request.application.outbound.ServiceRequestRepository;
 import cm.klg.service_request.application.outbound.UserRepository;
+import cm.klg.service_request.application.usecase.AcceptServiceRequestUseCase;
 import cm.klg.service_request.application.usecase.ApproveServiceProviderUseCase;
 import cm.klg.service_request.application.usecase.CreateNewServiceRequestUseCase;
 import cm.klg.service_request.application.usecase.CreateNewUserUseCase;
@@ -57,6 +59,15 @@ public class ServiceRequestBeans implements TransactionBeansProvider {
   public GetServiceRequestByIdUseCase getServiceRequestByIdUseCase(
       ServiceRequestRepository serviceRequestRepository) {
     return new GetServiceRequestByIdUseCase(serviceRequestRepository);
+  }
+
+  @Bean
+  public AcceptServiceRequestUseCase acceptServiceRequestUseCase(
+      ServiceProviderRepository serviceProviderRepository,
+      ServiceRequestRepository serviceRequestRepository,
+      DomainEventPublisher domainEventPublisher) {
+    return new AcceptServiceRequestUseCase(
+        serviceProviderRepository, serviceRequestRepository, domainEventPublisher);
   }
 
   @Bean
